Added overall description

--- a/1_Image_Classification.ipynb
+++ b/1_Image_Classification.ipynb
@@ -9,12 +9,11 @@
     "\n",
     "**Input dataset**\n",
     "\n",
-    "MNIST (28x28 grayscale images of single digit numbers).\n",
+    "MNIST: set of 28x28 grayscale images of single, handwriten digits.\n",
     "\n",
     "**Output classification**\n",
     "\n",
-    "Digit (0-9) with the highest value likelihood in probability \n",
-    "distribution.\n",
+    "Digit with the highest probability in the probability distribution of the 10 possible classes $[0, 9]$.\n",
     "\n",
     "Background\n",
     "--\n",
@@ -55,7 +54,14 @@
     "\n",
     "Measures the predictive performance of multi-class classifcation models.\n",
     "\t\t\n",
-    "Implemented as the function $L = -\\mathbf{y} \\cdot log(\\hat{ \\mathbf{y} })$, when $\\mathbf{y}$ is the input label vector and $\\hat{ \\mathbf{y} }$ is the model's output \"prediction vector.\""
+    "Implemented as the function $L = -\\mathbf{y} \\cdot log(\\hat{ \\mathbf{y} })$, when $\\mathbf{y}$ is the input label vector and $\\hat{ \\mathbf{y} }$ is the model's output \"prediction vector.\"\n",
+    "\n",
+    "Overview\n",
+    "--\n",
+    "\n",
+    "Multi-class image classification model predicting the most likely digit contained in the image.\n",
+    "\n",
+    "The model trains on 60,000 images through a 2-layer network and tests against 10,000 images."
    ]
   },
   {
