Updates to image classification description, adding binary classification

--- a/1_Image_Classification.ipynb
+++ b/1_Image_Classification.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Image Classification\n",
-    "--\n",
+    "<h1 style=\"color:SlateGray;\">Image Classification</h1>\n",
     "\n",
     "**Input dataset**\n",
     "\n",
@@ -13,27 +12,29 @@
     "\n",
     "**Output classification**\n",
     "\n",
-    "Digit with the highest probability in the probability distribution of the 10 possible classes $[0, 9]$.\n",
+    "Digit with the highest probability in the probability distribution of the 10 possible classes [0, 9].\n",
     "\n",
-    "Background\n",
-    "--\n",
+    "<h2 style=\"color:SlateGray;\">Background</h2>\n",
     "\n",
     "**Layers**\n",
     "\n",
+    "<a id='Layers-Dense'></a>\n",
     "*Dense*\n",
     "\n",
-    "Alternatively known as fully connected layers, are used for classification.\n",
-    "\t\t\n",
-    "By reducing the number of nodes from the previous layer/input you get natural \"classification\" behaviour/characteristics.\n",
+    "Used for application of the associated activation function across all nodes, Dense layers tend to have \"natural classification\" properties.\n",
+    "\n",
+    "Dense layers are implemented as linear maps (one-to-one and onto) and in practice will map from one linear space to a smaller or equal sized one.\n",
     "\t\t\n",
     "**Activations**\n",
     "\n",
+    "<a id='Activations-relu'></a>\n",
     "*relu*\n",
     "\n",
     "The default activation function when a clear situationally-specific activation function doesn't present itself. Converges well in general use cases and is computationally inexpensive.\n",
     "\t\t\n",
     "Implemented as the function $f(x) = max(x, 0)$, the source of its efficiency becomes self-evident retaining non-linearity, which is essential for learning complex features/concepts.\n",
     "\t\t\n",
+    "<a id='Activations-softmax'></a>\n",
     "*softmax*\n",
     "\n",
     "Used in multi-class classifcation to generate probabilities for each of the classes.\n",
@@ -42,6 +43,7 @@
     "\t\t\n",
     "**Optimizers**\n",
     "\n",
+    "<a id='Optimizers-rmsprop'></a>\n",
     "*rmsprop*\n",
     "\n",
     "Generally good optimization function with tunable learning rate parameters.\n",
@@ -49,19 +51,19 @@
     "Behaves similarly to gradient descent with momentum by normalizing the learning rate by a weighted, running average of the magnitudes of recent gradients.\n",
     "\t\t\n",
     "**Loss functions**\n",
-    "\t\n",
-    "*categorical corssentropy*\n",
+    "\n",
+    "<a id='Loss-functions-categorical_crossentropy'></a>\n",
+    "*categorical_crossentropy*\n",
     "\n",
     "Measures the predictive performance of multi-class classifcation models.\n",
     "\t\t\n",
     "Implemented as the function $L = -\\mathbf{y} \\cdot log(\\hat{ \\mathbf{y} })$, when $\\mathbf{y}$ is the input label vector and $\\hat{ \\mathbf{y} }$ is the model's output \"prediction vector.\"\n",
     "\n",
-    "Overview\n",
-    "--\n",
+    "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
     "\n",
     "Multi-class image classification model predicting the most likely digit contained in the image.\n",
     "\n",
-    "The model trains on 60,000 images through a 2-layer network and tests against 10,000 images."
+    "The model trains on 60,000 images through a 2-layer network and tests against 10,000 images. Images are converted from 28x28x1 (lxwxd) arrays to 512x1x1 arrays"
    ]
   },
   {
@@ -130,7 +132,7 @@
     "from keras import models\n",
     "from keras import layers\n",
     "\n",
-    "network = models.Sequential()\n",
+    "model = models.Sequential()\n",
     "network.add(layers.Dense(512, activation='relu', input_shape=(28 * 28,)))\n",
     "network.add(layers.Dense(10, activation='softmax'))\n",
     "network.summary()"
@@ -142,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.compile(optimizer='rmsprop',\n",
+    "model.compile(optimizer='rmsprop',\n",
     "                loss='categorical_crossentropy',\n",
     "                metrics=['accuracy'])"
    ]
@@ -195,7 +197,7 @@
     }
    ],
    "source": [
-    "history = network.fit(train_images, train_labels,\n",
+    "history = model.fit(train_images, train_labels,\n",
     "            epochs=5,\n",
     "            batch_size=128)"
    ]
@@ -265,23 +267,7 @@
     }
    ],
    "source": [
-    "test_loss, test_acc = network.evaluate(test_images, test_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test_acc: 0.9771\n"
-     ]
-    }
-   ],
-   "source": [
+    "test_loss, test_acc = model.evaluate(test_images, test_labels)\n",
     "print('test_acc:', test_acc)"
    ]
   }
