Wording updates and content additions to multiclass classification

--- a/1_Image_Classification.ipynb
+++ b/1_Image_Classification.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Title-Image-Classification'></a>\n",
     "<h1 style=\"color:SlateGray;\">Image Classification</h1>\n",
     "\n",
     "**Input dataset**\n",
