--- a/2_Binary_Classification.ipynb
+++ b/2_Binary_Classification.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Title-Binary-Classification'></a>\n",
     "<h1 style=\"color:SlateGray;\">Binary Classification</h1>\n",
-    "\n",
     "\n",
     "**Input dataset**\n",
     "\n",
@@ -48,7 +48,7 @@
     "\n",
     "Predict whether a written movie review is overall positive or negative.\n",
     "\n",
-    "The input data set consists of 25,000 training samples and 25,000 test samples and the associated labels contain either 0 or 1 (positive or negative). This example encodes each review by the 10,000 most frequently used words. The training samples are partitioned to be 15,000 training and 10,000 validation and each sample is one-hot encoded."
+    "The input data set consists of 25,000 training samples and 25,000 test samples, the associated labels contain either 0 or 1 (positive or negative). This example encodes each review by the 10,000 most frequently used words. The training samples are partitioned to be 15,000 training and 10,000 validation, each sample is one-hot encoded."
    ]
   },
   {
