Adding descriptions to Dropout layer

--- a/5_Overfitting_And_Underfitting.ipynb
+++ b/5_Overfitting_And_Underfitting.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Title-Binary-Classification'></a>\n",
-    "<h1 style=\"color:SlateGray;\">4_Overfitting_And_Underfitting</h1>\n",
+    "<a id='Title-Overfitting-And-Underfitting'></a>\n",
+    "<h1 style=\"color:SlateGray;\">Overfitting And Underfitting</h1>\n",
     "\n",
     "**Input dataset**\n",
     "\n",
@@ -20,7 +20,14 @@
     "**Layers**\n",
     "\n",
     "[*Dense*](1_Image_Classification.ipynb#Layers-Dense)\n",
-    "\t\t\n",
+    "\n",
+    "<a id='Layers-Dropout'></a>\n",
+    "*Dropout*\n",
+    "\n",
+    "Added to neural networks to mitigate overfitting.\n",
+    "\n",
+    "Randomly selects a fraction of neurons, specified by the input rate, to 0 during each iteration of training.\n",
+    "\n",
     "**Activations**\n",
     "\n",
     "[*relu*](1_Image_Classification.ipynb#Activations-relu)\n",
@@ -37,9 +44,9 @@
     "\n",
     "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
     "\n",
-    "Predict whether a written movie review is overall positive or negative.\n",
+    "Revisiting a previous example to explore the effects of various techniques on loss and accuracy.\n",
     "\n",
-    "The input data set consists of 25,000 training samples and 25,000 test samples, the associated labels contain either 0 or 1 (positive or negative). This example encodes each review by the 10,000 most frequently used words. The training samples are partitioned to be 15,000 training and 10,000 validation, each sample is one-hot encoded."
+    "First set of models tinker with the units parameter of the Dense layer. Second set of models use the L1 and L2 regularization parameters. Third set of models introduces Dropout layers. "
    ]
   },
   {
