--- a/3_Multiclass_Classification.ipynb
+++ b/3_Multiclass_Classification.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**Output classification**\n",
     "\n",
-    "Classifies into which of the 46 distict topic catagories each newswire belongs to.\n",
+    "Classifies into which of the 46 distinct topic categories each newswire belongs to.\n",
     "\n",
     "<h2 style=\"color:SlateGray;\">Background</h2>\n",
     "\n",
