--- a/4_Regression.ipynb
+++ b/4_Regression.ipynb
@@ -34,7 +34,7 @@
     "<a id='Loss-functions-mse'></a>\n",
     "*mse*\n",
     "\n",
-    "Measures the average squared difference between the aestimated values and what is estimated.\n",
+    "Measures the average squared difference between the estimated values and what is estimated.\n",
     "\n",
     "Implemented as the function $\\dfrac{1}{n} \\sum^{n}_{i = 1} (\\mathbf{Y}_i - \\mathbf{ \\hat{Y} }_i)^2$, where $\\mathbf{ \\hat{Y} }$ is the model's output prediction and $\\mathbf{Y}$ is the input label.\n",
     "\n",
