Added descriptions to basic convNet and fixed typos

--- a/1_Image_Classification.ipynb
+++ b/1_Image_Classification.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Input dataset**\n",
     "\n",
-    "MNIST: set of 28x28 grayscale images of single, handwriten digits.\n",
+    "MNIST: set of 28x28 grayscale images of single, handwritten digits.\n",
     "\n",
     "**Output classification**\n",
     "\n",
@@ -38,7 +38,7 @@
     "<a id='Activations-softmax'></a>\n",
     "*softmax*\n",
     "\n",
-    "Used in multi-class classifcation to generate probabilities for each of the classes.\n",
+    "Used in multi-class classification to generate probabilities for each of the classes.\n",
     "\t\t\n",
     "Normalizes the output vector such that the sum of its elements equals 1, thus, the output vector can be interpreted as a probability distribution.\n",
     "\t\t\n",
@@ -56,7 +56,7 @@
     "<a id='Loss-functions-categorical_crossentropy'></a>\n",
     "*categorical_crossentropy*\n",
     "\n",
-    "Measures the predictive performance of multi-class classifcation models.\n",
+    "Measures the predictive performance of multi-class classification models.\n",
     "\t\t\n",
     "Implemented as the function $L = -\\mathbf{y} \\cdot log(\\hat{ \\mathbf{y} })$, when $\\mathbf{y}$ is the input label vector and $\\hat{ \\mathbf{y} }$ is the model's output \"prediction vector.\"\n",
     "\n",
@@ -64,7 +64,7 @@
     "\n",
     "Multi-class image classification model predicting the most likely digit contained in the image.\n",
     "\n",
-    "The model trains on 60,000 images through a 2-layer network and tests against 10,000 images. Images are converted from 28x28x1 (lxwxd) arrays to 512x1x1 arrays"
+    "The model trains on 60,000 images through a 2-layer network and tests against 10,000 images. Images are converted from 28x28x1 $(l,w,d)$ arrays to 512x1x1 arrays"
    ]
   },
   {
