--- a/6_Basic_ConvNet.ipynb
+++ b/6_Basic_ConvNet.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Title-Basic-Covnet'></a>\n",
-    "<h1 style=\"color:SlateGray;\">Basic Covnet</h1>\n",
+    "<a id='Title-Basic-ConvNet'></a>\n",
+    "<h1 style=\"color:SlateGray;\">Basic ConvNet</h1>\n",
     "\n",
     "**Input dataset**\n",
     "\n",
-    "MNIST: set of 28x28 grayscale images of single, handwriten digits.\n",
+    "MNIST: set of 28x28 grayscale images of single, handwritten digits.\n",
     "\n",
     "**Output classification**\n",
     "\n",
@@ -24,19 +24,23 @@
     "<a id='Layers-Conv2D'></a>\n",
     "*Conv2D*\n",
     "\n",
-    "Extracts local features from a 2-D tensor.\n",
+    "Extracts local features from a 2-dimensional tensor.\n",
     "\n",
     "Applies a convolution operation using a small parameterized window.\n",
     "\n",
     "<a id='Layers-MaxPooling2D'></a>\n",
     "*MaxPooling2D*\n",
     "\n",
-    "Filters redundant neurons by summarizing leanred local patterns.\n",
+    "Filters redundant neurons by summarizing learned local patterns.\n",
     "\n",
     "Utilizes a striding window, similarly to convolution, to pick out local maximum values.\n",
     "\n",
     "<a id='Layers-Flatten'></a>\n",
     "*Flatten*\n",
+    "\n",
+    "Connecting layer used when a multi-dimensional layer is followed by a single-dimensional layer.\n",
+    "\n",
+    "Reduces dimensionality of a tensor such as $(x, y, z) \\rightarrow (x^\\prime)$.\n",
     "\n",
     "**Activations**\n",
     "\n",
@@ -52,7 +56,11 @@
     "\n",
     "[*binary_crossentropy*](2_Binary_Classification.ipynb#Loss-functions-binary_crossentropy)\n",
     "\n",
-    "<h2 style=\"color:SlateGray;\">Overview</h2>\n"
+    "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
+    "\n",
+    "Revisiting a previous example to explore the effects of a different model on loss and accuracy.\n",
+    "\n",
+    "Using a convolutional neural network to learn local patterns from images before attempting to perform classification."
    ]
   },
   {
