--- a/3_Multiclass_Classification.ipynb
+++ b/3_Multiclass_Classification.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Input dataset**\n",
     "\n",
-    "Reuters: set of short newswires with adjustable limit on max word count.\n",
+    "Reuters: a set of short newswires with an adjustable limit on max word count.\n",
     "\n",
     "**Output classification**\n",
     "\n",
