--- a/4_Regression.ipynb
+++ b/4_Regression.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Input dataset**\n",
     "\n",
-    "Boston Housing: set of housing prices and 13 associated house-rating data points.\n",
+    "Boston Housing: a set of housing prices and 13 associated house-rating data points.\n",
     "\n",
     "**Output classification**\n",
     "\n",
