--- a/5_Overfitting_And_Underfitting.ipynb
+++ b/5_Overfitting_And_Underfitting.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Input dataset**\n",
     "\n",
-    "IMBD: set of movie reviews with adjustable limit on max word count.\n",
+    "IMBD: a set of movie reviews with an adjustable limit on max word count.\n",
     "\n",
     "**Output classification**\n",
     "\n",
