--- a/6_Basic_ConvNet.ipynb
+++ b/6_Basic_ConvNet.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Input dataset**\n",
     "\n",
-    "MNIST: set of 28x28 grayscale images of single, handwritten digits.\n",
+    "MNIST: a set of 28x28 grayscale images of single, handwritten digits.\n",
     "\n",
     "**Output classification**\n",
     "\n",
