--- a/8_Feature_Extraction.ipynb
+++ b/8_Feature_Extraction.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
     "\n",
-    "Implementation of the feature extraction technique using a pre-trained convNet. As no training is required, this implementation is very computationally light and therefore fast.\n",
+    "Implementation of the feature extraction technique using a pre-trained convNet. As no training is done in the feature extraction step, this implementation is very computationally light and therefore fast.\n",
     "\n",
     "Instantiates two separate models - a VGG16 model as a convolutional base and a simple Dense classifier. A data generator feeds in data from a structured directory to the convolutional base, which then outputs a tuple of extracted features and labels. That tuple is then used as input to the classifier producing the final prediction.\n"
    ]
