Separated out the three models, accuracy seems to not be affected

--- a/8_Feature_Extraction_Separated.ipynb
+++ b/8_Feature_Extraction_Separated.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Title-Feature-Extraction'></a>\n",
-    "<h1 style=\"color:SlateGray;\">Feature Extraction</h1>\n",
+    "<a id='Title-Feature-Extraction-Separated'></a>\n",
+    "<h1 style=\"color:SlateGray;\">Feature Extraction (Separated)</h1>\n",
     "\n",
     "**Input dataset**\n",
     "\n",
