Modified broken links and finished feature extraction and fine tuning, differences between versions of Keras lead to change in implementation choice

--- a/06_Basic_ConvNet.ipynb
+++ b/06_Basic_ConvNet.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "**Layers**\n",
     "\n",
-    "[*Dense*](1_Image_Classification.ipynb#Layers-Dense)\n",
+    "[*Dense*](01_Image_Classification.ipynb#Layers-Dense)\n",
     "\n",
     "<a id='Layers-Conv2D'></a>\n",
     "*Conv2D*\n",
@@ -44,17 +44,17 @@
     "\n",
     "**Activations**\n",
     "\n",
-    "[*relu*](1_Image_Classification.ipynb#Activations-relu)\n",
+    "[*relu*](01_Image_Classification.ipynb#Activations-relu)\n",
     "\n",
     "[*sigmoid*](2_Binary_Classification.ipynb#Activations-sigmoid)\n",
     "\t\t\n",
     "**Optimizers**\n",
     "\n",
-    "[*rmsprop*](1_Image_Classification.ipynb#Optimizers-rmsprop)\n",
+    "[*rmsprop*](01_Image_Classification.ipynb#Optimizers-rmsprop)\n",
     "\t\t\n",
     "**Loss functions**\n",
     "\n",
-    "[*binary_crossentropy*](2_Binary_Classification.ipynb#Loss-functions-binary_crossentropy)\n",
+    "[*binary_crossentropy*](02_Binary_Classification.ipynb#Loss-functions-binary_crossentropy)\n",
     "\n",
     "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
     "\n",
