--- a/07_Intermediate_ConvNet.ipynb
+++ b/07_Intermediate_ConvNet.ipynb
@@ -19,27 +19,27 @@
     "\n",
     "**Layers**\n",
     "\n",
-    "[*Dense*](1_Image_Classification.ipynb#Layers-Dense)\n",
+    "[*Dense*](01_Image_Classification.ipynb#Layers-Dense)\n",
     "\n",
-    "[*Conv2D*](6_Basic_ConvNet.ipynb#Layers-Conv2D)\n",
+    "[*Conv2D*](06_Basic_ConvNet.ipynb#Layers-Conv2D)\n",
     "\n",
-    "[*MaxPooling2D*](6_Basic_ConvNet.ipynb#Layers-MaxPooling2D)\n",
+    "[*MaxPooling2D*](06_Basic_ConvNet.ipynb#Layers-MaxPooling2D)\n",
     "\n",
-    "[*Flatten*](6_Basic_ConvNet.ipynb#Layers-Flatten)\n",
+    "[*Flatten*](06_Basic_ConvNet.ipynb#Layers-Flatten)\n",
     "\n",
     "**Activations**\n",
     "\n",
-    "[*relu*](1_Image_Classification.ipynb#Activations-relu)\n",
+    "[*relu*](01_Image_Classification.ipynb#Activations-relu)\n",
     "\n",
-    "[*sigmoid*](2_Binary_Classification.ipynb#Activations-sigmoid)\n",
+    "[*sigmoid*](02_Binary_Classification.ipynb#Activations-sigmoid)\n",
     "\t\t\n",
     "**Optimizers**\n",
     "\n",
-    "[*rmsprop*](1_Image_Classification.ipynb#Optimizers-rmsprop)\n",
+    "[*rmsprop*](01_Image_Classification.ipynb#Optimizers-rmsprop)\n",
     "\t\t\n",
     "**Loss functions**\n",
     "\n",
-    "[*binary_crossentropy*](2_Binary_Classification.ipynb#Loss-functions-binary_crossentropy)\n",
+    "[*binary_crossentropy*](02_Binary_Classification.ipynb#Loss-functions-binary_crossentropy)\n",
     "\n",
     "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
     "\n",
