--- a/03_Multiclass_Classification.ipynb
+++ b/03_Multiclass_Classification.ipynb
@@ -19,25 +19,25 @@
     "\n",
     "**Layers**\n",
     "\n",
-    "[*Dense*](1_Image_Classification.ipynb#Layers-Dense)\n",
+    "[*Dense*](01_Image_Classification.ipynb#Layers-Dense)\n",
     "\t\t\n",
     "**Activations**\n",
     "\n",
-    "[*relu*](1_Image_Classification.ipynb#Activations-relu)\n",
+    "[*relu*](01_Image_Classification.ipynb#Activations-relu)\n",
     "\t\t\n",
-    "[*softmax*](1_Image_Classification.ipynb#Activations-softmax)\n",
+    "[*softmax*](01_Image_Classification.ipynb#Activations-softmax)\n",
     "\t\t\n",
     "**Optimizers**\n",
     "\n",
-    "[*rmsprop*](1_Image_Classification.ipynb#Optimizers-rmsprop)\n",
+    "[*rmsprop*](01_Image_Classification.ipynb#Optimizers-rmsprop)\n",
     "\t\t\n",
     "**Loss functions**\n",
     "\n",
-    "[*categorical_crossentropy*](1_Image_Classification.ipynb#Loss-functions-categorical_crossentropy)\n",
+    "[*categorical_crossentropy*](01_Image_Classification.ipynb#Loss-functions-categorical_crossentropy)\n",
     "\n",
     "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
     "\n",
-    "Generalizes on the techniques covered in [*Binary Classification*](2_Binary_Classification.ipynb#Title-Binary-Classification) into single-label, multi-class classification.\n",
+    "Generalizes on the techniques covered in [*Binary Classification*](02_Binary_Classification.ipynb#Title-Binary-Classification) into single-label, multi-class classification.\n",
     "\n",
     "The input data set consists of 8,982 training samples and 2,246 test samples, the associated labels range in integer values [0, 45]. This example encodes each newswire by the 10,000 most frequently used words. The training samples are partitioned to be 7,982 training and 1,000 validation, each sample is one-hot encoded."
    ]
