--- a/11_Word_Embeddings.ipynb
+++ b/11_Word_Embeddings.ipynb
@@ -33,7 +33,6 @@
     "\n",
     "[*Dense*](01_Image_Classification.ipynb#Layers-Dense)\n",
     "\n",
-    "\n",
     "**Activations**\n",
     "\n",
     "[*relu*](01_Image_Classification.ipynb#Activations-relu)\n",
@@ -50,7 +49,7 @@
     "\n",
     "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
     "\n",
-    "Revisiting the IMBD classification problm using Embeddings, also a comparison in performance between randomly initialized and pre-trained Embeddings when training on very limited samples.\n",
+    "Revisiting the IMBD classification problem using Embeddings, also a comparison in performance between randomly initialized and pre-trained Embeddings when training on very limited samples.\n",
     "\n",
     "This IMBD example leverages an 8-dimensional Embedding that only looks at the first 20 words of each sample, while still training on the full set of samples. The model comparison of pre-trained vs. randomly initialized Embeddings, on the other hand, are trained on a mere 200 samples before validation. The two models used have 300-dimensional Embeddings, where the pre-trained Embedding's dimensions are initialized from the GloVe model's weights and are subsequently frozen.\n"
    ]
