Added missing descriptions of Embeddings and renamed basic RNN

--- a/11_Word_Embeddings.ipynb
+++ b/11_Word_Embeddings.ipynb
@@ -33,6 +33,13 @@
     "\n",
     "[*Dense*](01_Image_Classification.ipynb#Layers-Dense)\n",
     "\n",
+    "<a id='Layers-Embedding'></a>\n",
+    "*Embedding*\n",
+    "\n",
+    "An implementation that converts words into tensors.\n",
+    "\n",
+    "Embeds words into a vector space allowing for spatial patterns of the mapped words to become useful for predicting.\n",
+    "\n",
     "**Activations**\n",
     "\n",
     "[*relu*](01_Image_Classification.ipynb#Activations-relu)\n",
