--- a/12_Basic_NLP_RNN.ipynb
+++ b/12_Basic_NLP_RNN.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Title-Basic-RNN'></a>\n",
-    "<h1 style=\"color:SlateGray;\">Basic RNN</h1>\n",
+    "<a id='Title-Basic-NLP-RNN'></a>\n",
+    "<h1 style=\"color:SlateGray;\">Basic NLP RNN</h1>\n",
     "\n",
     "**Input dataset**\n",
     "\n",
@@ -20,6 +20,8 @@
     "**Layers**\n",
     "\n",
     "[*Dense*](01_Image_Classification.ipynb#Layers-Dense)\n",
+    "\n",
+    "[*Embedding*](11_Word_Embeddings.ipynb#Layers-Embedding)\n",
     "\n",
     "<a id='Layers-SimpleRNN'></a>\n",
     "*SimpleRNN*\n",
@@ -36,8 +38,6 @@
     "A running history list is kept external to the network and its values are used as input along with the network's most recent output to compute the next state. This allows vanishingly small gradients to refresh and continue updating weights, thus allowing learning to continue.\n",
     "\n",
     "**Activations**\n",
-    "\n",
-    "[*relu*](01_Image_Classification.ipynb#Activations-relu)\n",
     "\n",
     "[*sigmoid*](02_Binary_Classification.ipynb#Activations-sigmoid)\n",
     "\t\t\n",
