Adding time series RNN, minor tweaks in regression and NLP RNN

--- a/04_Regression.ipynb
+++ b/04_Regression.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "Measures the average squared difference between the estimated values and what is estimated.\n",
     "\n",
-    "Implemented as the function $\\dfrac{1}{n} \\sum^{n}_{i = 1} (\\mathbf{Y}_i - \\mathbf{ \\hat{Y} }_i)^2$, where $\\mathbf{ \\hat{Y} }$ is the model's output prediction and $\\mathbf{Y}$ is the input label.\n",
+    "Implemented as the function $\\dfrac{1}{n} \\sum^{n}_{i = 1} \\left( \\mathbf{Y}_i - \\mathbf{ \\hat{Y} }_i \\right)^2$, where $\\mathbf{ \\hat{Y} }$ is the model's output prediction and $\\mathbf{Y}$ is the input label.\n",
     "\n",
     "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
     "\n",
