--- a/12_Basic_NLP_RNN.ipynb
+++ b/12_Basic_NLP_RNN.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "Builds upon the [SimpleRNN](#Layers-SimpleRNN) layer including a running history of all outputs to be used in combination with the state variable. This allows the network to reference old states analogous to writing notes and referencing them when they've fallen from short-term memory.\n",
     "\n",
-    "A running history list is kept external to the network and its values are used as input along with the network's most recent output to compute the next state. This allows vanishingly small gradients to refresh and continue updating weights, thus allowing learning to continue.\n",
+    "A running history list is kept external to the network and its values are used as input along with the network's most recent output to compute the next state.\n",
     "\n",
     "**Activations**\n",
     "\n",
