Adding deep dream

--- a/16_Language_Model.ipynb
+++ b/16_Language_Model.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
     "\n",
-    "Demonstrates the capabilities of text-generation with RNN-based models.\n",
+    "Demonstrates the capabilities of text generation with RNN-based models.\n",
     "\n",
     "Uses a random snippet of text from the dataset as a seed to produce the initial probability distribution of possible next characters. This distribution is rescaled by a temperature, which indicates the amount of randomness-padding desired from the distribution, a next character is then selected and appended to the original seed which will be fed back into the model for the next prediction.\n"
    ]
@@ -287,13 +287,7 @@
       "presarness of tent, man we caren that thought to obeypee,\"\n",
       "------ temperature: 1.2\n",
       "o\n",
-      "presarness of tent, man we caren that thought to obeypee,\" come it\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "presarness of tent, man we caren that thought to obeypee,\" come it\n",
       "hominss and viing, \"swear develop attracity and perseebed only so--it is, permes. we diffast type perspent\n",
       "who is mir: thused of homands of tend that all,\" with him not fastigable. \n",
       "peises and buinw bekenthwass, by obscurecy that beying the primons.--the delightful what this, an-achies soserveem\n",
