Adding VAE and minor grammar fixes to NST

--- a/18_Neural_Style_Transfer.ipynb
+++ b/18_Neural_Style_Transfer.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Input images**\n",
     "\n",
-    "A target image (the base) and a referrence style image.\n",
+    "A target image (the base) and a reference style image.\n",
     "\n",
     "**Output images**\n",
     "\n",
@@ -24,7 +24,7 @@
     "\n",
     "A general purpose image classification model.\n",
     "\n",
-    "An inprovement on [*VGG16*](08_Feature_Extraction.ipynb#Pre-trained-models-VGG16), where instead of being 16-layers is implemented with 19-layers.\n",
+    "An improvement on [*VGG16*](08_Feature_Extraction.ipynb#Pre-trained-models-VGG16), where instead of being 16-layers is implemented with 19-layers.\n",
     "\t\t\n",
     "**Optimizers**\n",
     "\n",
