Additional layer description for intermediate convNet, adddding GAN initial commit, but is missing descriptions

--- a/07_Intermediate_ConvNet.ipynb
+++ b/07_Intermediate_ConvNet.ipynb
@@ -27,6 +27,8 @@
     "\n",
     "[*Flatten*](06_Basic_ConvNet.ipynb#Layers-Flatten)\n",
     "\n",
+    "[*Dropout*](05_Overfitting_And_Underfitting.ipynb#Layers-Dropout)\n",
+    "\n",
     "**Activations**\n",
     "\n",
     "[*relu*](01_Image_Classification.ipynb#Activations-relu)\n",
