Added more descriptions to GAN

--- a/20_Generative_Adversarial_Networks.ipynb
+++ b/20_Generative_Adversarial_Networks.ipynb
@@ -30,6 +30,10 @@
     "<a id='Layers-LeakyReLU'></a>\n",
     "*LeakyReLU*\n",
     "\n",
+    "Addresses the dying ReLu problem, which is when large negative-biased value come into the layer, the ReLu function will then filter out all the negative values losing all that data in the process.\n",
+    "\n",
+    "Instead of setting all negative values to zero, leaky ReLu allows small negative values to flow through.\n",
+    "\n",
     "**Activations**\n",
     "\n",
     "[*sigmoid*](02_Binary_Classification.ipynb#Activations-sigmoid)\n",
@@ -37,7 +41,9 @@
     "<a id='Activations-tanh'></a>\n",
     "*tanh*\n",
     "\n",
+    "Allows the layer to output values between [-1, 1], the gradient of tanh peaks with input values near 0 and have higher peak values than [*sigmoid*](02_Binary_Classification.ipynb#Activations-sigmoid).\n",
     "\n",
+    "While tanh is still a sigmoid function due to its S-shape, its centered at coordinate point (0, 0) allowing negative and positive numbers.\n",
     "\t\t\n",
     "**Optimizers**\n",
     "\n",
@@ -48,7 +54,10 @@
     "[*binary_crossentropy*](02_Binary_Classification.ipynb#Loss-functions-binary_crossentropy)\n",
     "\n",
     "<h2 style=\"color:SlateGray;\">Overview</h2>\n",
-    "\n"
+    "\n",
+    "Forges fake images that are iteratively better able to fool fake detectors.\n",
+    "\n",
+    "Instantiates a generator whose purpose is to translate vectors from latent space into images that appear to look like input images. An adversary is fed images from the dataset and the generator and attempts to distinguish which images are \"real\" and which ones are \"fake.\" Each iteration the generator gets better at creating fake images and the adversary gets better at detecting them.\n"
    ]
   },
   {
